Fixed spacing (Hopefully this works)

--- a/style.css
+++ b/style.css
@@ -190,7 +190,7 @@ main {
     }
 }
 
-@media screen and (max-width: 499px) {
+@media screen and (max-width: 500px) {
     main {
         padding: 20px;
     }
